5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1672_2471.log
== TEST (2019-04-17 20:21:46) 
-- CODE:
imc = float(input("indice de massa corporal: "))
idade = int(input("iinforme a idade: "))


-- ERROR:
File "XXXX", line 3
    
                                                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 23:16:48) 
-- CODE:
idade = int(input("informe a idade: "))
imc = float(input("indice de massa corporal: "))
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
elif(imc < 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Baixo")
elif(imc >= 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc < 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc >= 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Alto")
	
	




-- OUTPUT:
Entradas:  0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 23:17:08) 
-- CODE:
idade = int(input("informe a idade: "))
imc = float(input("indice de massa corporal: "))
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
elif(imc < 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Baixo")
elif(imc >= 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc < 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc >= 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Alto")
	
	




-- EXECUTION TIME:
0.14073
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 23:17:35) 
-- CODE:
idade = int(input("informe a idade: "))
imc = float(input("indice de massa corporal: "))
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
elif(imc < 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Baixo")
elif(imc >= 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc < 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc >= 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Alto")
	
	




-- OUTPUT:
Entradas:  0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 23:19:01) 
-- CODE:
idade = int(input("informe a idade: "))
imc = float(input("indice de massa corporal: "))
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Entradas: " ,idade,"anos e IMC" ,imc
	print("Dados invalidos")
elif(imc < 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Baixo")
elif(imc >= 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc < 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc >= 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Alto")
	
	




-- EXECUTION TIME:
0.162846
-- ERROR:
  File "/home/codebench/codes/1672/2471/main.py", line 5
    print("Dados invalidos")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 23:20:01) 
-- CODE:
idade = int(input("informe a idade: "))
imc = float(input("indice de massa corporal: "))
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Entradas: " ,idade,"anos e IMC" ,imc
	print("Dados invalidos")
elif(imc < 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Baixo")
elif(imc >= 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc < 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc >= 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Alto")
	
	




-- ERROR:
File "XXXX", line 5
    print("Dados invalidos")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 23:20:19) 
-- CODE:
idade = int(input("informe a idade: "))
imc = float(input("indice de massa corporal: "))
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Dados invalidos")
elif(imc < 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Baixo")
elif(imc >= 22 and idade < 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc < 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Medio")
elif(imc >= 22 and idade >= 45):
	print("Entradas: " ,idade,"anos e IMC" ,imc)
	print("Risco: Alto")
	
	




-- EXECUTION TIME:
0.129881
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
